--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Blog
 description: >- # this means to ignore newlines until "baseurl:"
   色々とまとめておくためにブログ始めました。
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://harukawa.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  harukawa
 
 # Build settings
