--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Blog
+title: 雑多的記録
 description: >- # this means to ignore newlines until "baseurl:"
   色々とまとめておくためにブログ始めました。
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -22,6 +22,11 @@ github_username:  harukawa
 
 # Build settings
 markdown: kramdown
+
+kramdown:
+  input: GFM
+  hard_wrap: false
+  
 theme: minima
 plugins:
   - jekyll-feed
